[package]
name = "lav-seed"
version = "0.1.0"
edition = "2024"

authors = ["Lvender"]
description = "Deterministic numeric ID generator with collision-free affine permutation."
license = "MIT"
repository = "https://github.com/lvender-12/lav-seed"
readme = "README.md"

keywords = ["id", "generator", "numeric", "uuid", "seed"]
categories = ["algorithms", "data-structures"]
[dependencies]
