[package]
name = "lav-seed"
version = "0.1.1"
edition = "2024"

authors = ["Lvender"]
description = "Fast deterministic numeric ID generator using permutation techniques with collision-free guarantees."
license = "MIT"
repository = "https://github.com/lvender-12/lav-seed"
readme = "README.md"

keywords = ["id", "generator", "numeric", "uuid", "seed"]
categories = ["algorithms", "data-structures"]
[dependencies]
